2012-09-24  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/54684
	* tree-ssa-ccp.c (optimize_unreachable): Properly update stmts.

2012-09-24  Marc Glisse  <marc.glisse@inria.fr>

	* tree-ssa-forwprop.c: Include tree-ssa-propagate.h.
	(simplify_bitfield_ref): Handle constructors.
	* Makefile.in (tree-ssa-forwprop.o): Depend on tree-ssa-propagate.h.

2012-09-24  Richard Guenther  <rguenther@suse.de>

	* tree-ssa-pre.c (bitmap_find_leader, create_expression_by_pieces,
	find_or_generate_expression): Remove dominating stmt argument.
	(find_leader_in_sets, phi_translate_1, bitmap_find_leader,
	create_component_ref_by_pieces_1, create_component_ref_by_pieces,
	do_regular_insertion, do_partial_partial_insertion): Adjust.
	(compute_avail): Do not set uids.

2012-09-24  Eric Botcazou  <ebotcazou@adacore.com>

	* tree-streamer-in.c (unpack_ts_type_common_value_fields): Stream in
	TYPE_NONALIASED_COMPONENT flag.
	* tree-streamer-out.c (pack_ts_type_common_value_fields): Stream out
	TYPE_NONALIASED_COMPONENT flag.

2012-09-24  Jia Liu  <proljc@gmail.com>

	* doc/lto.texi: Separate sections.
	* doc/plugins.texi: Likewise.

2012-09-24  Richard Guenther  <rguenther@suse.de>

	PR middle-end/52173
	* gimple.c (gimple_copy): Properly mark the copy modified
	if SSA operands are present.

2012-09-23  Eric Botcazou  <ebotcazou@adacore.com>

	PR tree-optimization/54669
	* tree-ssa-loop-ivcanon.c (propagate_into_all_uses): Invoke
	maybe_clean_or_replace_eh_stmt on the modified use statements.

2012-09-23  Marc Glisse  <marc.glisse@inria.fr>

	* expr.c (do_store_flag): Remove duplicated code.

2012-09-22  Segher Boessenkool  <segher@kernel.crashing.org>

	* config/rs6000/predicates.md (altivec_register_operand,
	vsx_register_operand, vfloat_operand, vint_operand,
	vlogical_operand, gpc_reg_operand, cc_reg_operand,
	cc_reg_not_cr0_operand, cc_reg_not_micro_cr0_operand):
	If op is a SUBREG, consider its SUBREG_REG instead.

2012-09-22  Uros Bizjak  <ubizjak@gmail.com>
